# neutrino_framework

./: .appveyor.yml  .atom-build.yml  .bettercodehub.yml  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  SUMMARY.md  build.cmd  build.sh  clang-format.sh  clang_format.sh  clang_tidy.sh  filestodo.todo  framework.sublime-project  framework.sublime-workspace  framework.todo  generate_gl.py  meson.build  meson_options.txt  todoparser.py  travis_install.sh  travis_run.sh  update_tags.sh
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md  meson.build
docs/source/: conf.py  index.rst
example/image/: CMakeLists.txt  main.cpp  meson.build
examples/: CMakeLists.txt  meson.build
examples/image/: CMakeLists.txt  main.cpp
examples/light/: CMakeLists.txt  main.cpp
examples/opengl/: main.cpp  meson.build
examples/window_events/: CMakeLists.txt  data_context.cpp  data_context.hpp  event_handler.cpp  event_handler.hpp  main.cpp  view.cpp  view.hpp
framework/: CMakeLists.txt
framework/common/: CMakeLists.txt  crc.hpp  crc_details.hpp  meson.build  types.hpp  utils.hpp  utils_details.cpp
framework/gl/: gl.hpp  glxext.hpp  wglext.hpp
framework/graphics/: CMakeLists.txt  color_type.cpp  color_type.hpp  context.cpp  context.hpp  context_settings.cpp  context_settings.hpp  image.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.hpp
framework/log/: CMakeLists.txt  log.hpp  meson.build  stream_logger.cpp
framework/math/: CMakeLists.txt  math.hpp
framework/opengl/: CMakeLists.txt  gl.cpp  gl.hpp  meson.build
framework/system/: CMakeLists.txt  context_settings.hpp  window.cpp  window.hpp
framework/unit_test/: CMakeLists.txt  meson.build
framework/window/: CMakeLists.txt  keyboard.hpp  meson.build  mouse.hpp  window.cpp  window.hpp  window_callback_types.hpp  window_position.cpp  window_position.hpp  window_size.cpp  window_size.hpp
manual_tests/window_events/: CMakeLists.txt  main.cpp
neutrino/: CMakeLists.txt  README.md  neutrino.dox
neutrino/common/: CMakeLists.txt  README.md  common.dox  crc.hpp  exceptions.hpp  fps_counter.hpp  global_defines.hpp  instance_id.hpp  position.hpp  signal.hpp  size.hpp  types.hpp  utf.hpp  utils.hpp  version.hpp  zlib.hpp
neutrino/game_core/: CMakeLists.txt  camera.hpp  fps_counter.hpp
neutrino/gl/: CMakeLists.txt  gl.hpp  glxext.hpp  wglext.hpp
neutrino/graphics/: CMakeLists.txt  README.md  color.hpp  color_type.hpp  font.hpp  graphics.dox  image.hpp  mesh.hpp  render.hpp  renderer.hpp  shader.hpp  texture.hpp  uniform.hpp
neutrino/log/: CMakeLists.txt  README.md  log.dox  log.hpp  logger.hpp  stream_logger.hpp
neutrino/math/: CMakeLists.txt  README.md  math.dox  math.hpp
neutrino/profiler/: CMakeLists.txt  README.md  profiler.hpp
neutrino/system/: CMakeLists.txt  README.md  application.hpp  context.hpp  context_settings.hpp  keyboard.hpp  mouse.hpp  system.dox  window.hpp
neutrino/unit_test/: CMakeLists.txt  README.md  suite.hpp  unit_test.dox
src/: CMakeLists.txt  common_types.h  common_types.hpp  debug.h  debug.hpp  meson.build
src/canvas/: canvas.cpp  canvas.hpp  canvas_implementation.hpp
src/common/: CMakeLists.txt  color_type.cpp  color_type.hpp  common_types.hpp  crc.hpp  crc_details.hpp  meson.build  pixel_type.hpp  types.hpp  utils.hpp  utils_details.cpp  utils_details.hpp  version.cpp  version.hpp
src/graphic/: CMakeLists.txt  canvas.hpp  canvas_base.hpp  context.cpp  context.hpp  context_implementation.hpp  meson.build  opengl_canvas.cpp  opengl_canvas.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp  window_implementation.hpp
src/image/: image.cpp  image.hpp  meson.build
src/log/: CMakeLists.txt  log.cpp  log.hpp  log_details.cpp  log_details.hpp  logger.hpp  meson.build  stream_logger.cpp  stream_logger.hpp
src/logger/: log.cpp  log.hpp  stream_logger.cpp  stream_logger.hpp
src/math/: CMakeLists.txt  common_func.h  common_func.hpp  common_functions.hpp  common_functions_details.hpp  constants.h  constants.hpp  exponential_func.h  exponential_func.hpp  exponential_functions.hpp  fmath.h  fmath.hpp  geometric_func.h  geometric_func.hpp  geometric_functions.hpp  geometric_functions_details.hpp  math.hpp  matrix_func.h  matrix_func.hpp  matrix_functions.hpp  matrix_functions_details.hpp  matrix_transform.h  matrix_type.h  matrix_type.hpp  matrix_type_details.hpp  meson.build  relational_func.h  relational_func.hpp  relational_functions.hpp  relational_functions_details.hpp  transform_func.h  transform_func.hpp  transform_functions.hpp  trigonometric_func.h  trigonometric_func.hpp  trigonometric_functions.hpp  utils.h  utils.hpp  vector_type.h  vector_type.hpp  (+1 more)
src/opengl/: CMakeLists.txt  context.cpp  context.hpp  context_settings.cpp  context_settings.hpp  gl.cpp  gl.hpp  gl_details.hpp  mesh.cpp  mesh.hpp  meson.build  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/unit_test/: CMakeLists.txt  assertions.h  assertions.hpp  meson.build  suite.cpp  suite.h  suite.hpp  test.h  test.hpp
src/unittest/: assertions.h  suite.cpp  suite.h  test.h
src/window/: CMakeLists.txt  implementation.hpp  keyboard.hpp  meson.build  mouse.hpp  window.cpp  window.hpp  window_callback_types.hpp  window_events.hpp  window_implementation.hpp  window_position.cpp  window_position.hpp  window_size.cpp  window_size.hpp
test/: CMakeLists.txt  meson.build  run_all_tests.py  runall.py
test/001_vector_constructor/: main.cpp
test/002_vector_operators/: main.cpp
test/003_vector_common/: main.cpp
test/004_vector_exponential/: main.cpp
test/005_vector_relational/: main.cpp
test/006_vector_geometric/: main.cpp
test/007_vector_trigonometric/: main.cpp
test/008_matrix_constructor/: main.cpp
test/009_matrix_assign/: main.cpp
test/010_matrix_access/: main.cpp
test/011_matrix_with_scalar/: main.cpp
test/012_matrix_plus_minus/: main.cpp
test/013_matrix_multiplication/: main.cpp
test/013_matrix_multipliction/: main.cpp
(+819 files in other folders)
