option('build_tests', type : 'boolean', value : true, description: 'Should tests be inculuded in build.')
option('build_examples', type : 'boolean', value : true, description: 'Should examples be inculuded in build.')
option('build_docs', type : 'boolean', value : true, description: 'Should generate documentation.')